<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:layout_margin="10dp"
        android:background="@drawable/shapeemail"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:drawableTint="@color/blue_base"
        android:hint="@string/email"
        android:padding="15dp"
        android:textColor="@color/dark_blue"
        android:textColorHint="@color/blue_base" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:layout_margin="10dp"
        app:passwordToggleEnabled="true"
        android:background="@drawable/shapeemail"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        android:drawableTint="@color/blue_base"
        android:hint="@string/password"
        android:padding="15dp"
        android:password="true"
        android:textColor="@color/dark_blue"
        android:textColorHint="@color/blue_base" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:shadowColor="@android:color/transparent"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:rippleColor="@color/dark_blue" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="bottom"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:gravity="bottom"
        android:text="@string/contact_support"
        android:textColor="@color/dark_blue"
        android:textStyle="normal" />

</LinearLayout>